--- a/docs/example/github_workflow_example.yml
+++ b/docs/example/github_workflow_example.yml
@@ -23,4 +23,4 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     
     - name: Call Curl
-      run: curl -X GET "https://${{secrets.HOST}}/tasks/trigger.php?token=${{secrets.TOKEN}}&task=${{secrets.TASK}}"
+      run: curl -X GET "https://${{secrets.HOST}}/?token=${{secrets.TOKEN}}&task=${{secrets.TASK}}"
